tests/build/cases/widget_new/missing_semi_in_when1.stderr
error: expected `,`
  --> cases/widget_new/missing_semi_in_when1.rs:12:13
   |
12 |             cursor = CursorIcon::Hand;
   |             ^^^^^^
